--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@ padding-bottom: 30px
     border-radius: 25px;
     border: 5px solid goldenrod;
 }
+.rounded-logo{
+    border-radius: 5px;
+    
+}
+
 .info-title{
     font-size: 36px;
     font-weight: bolder;
